Feature/매매로직개선 (#137)
* 지지/저항선 계산 로직 수정

* 지지/저항 버퍼금액 6000원으로 설명 수정